tests/type_errors/elif2.pylambda
elif true {
    print 1;
}